cmake_minimum_required(VERSION 3.5)
project(minimal_talker)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
if (NOT WIN32)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra")
endif()

add_executable(minimal_talker minimal_talker.cpp)
ament_target_dependencies(minimal_talker rclcpp std_msgs)
install(TARGETS minimal_talker DESTINATION bin)
ament_package()
