cmake_minimum_required(VERSION 3.5)
project(old_school_talker)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
if (NOT WIN32)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra")
endif()

add_executable(old_school_talker old_school_talker.cpp)
ament_target_dependencies(old_school_talker rclcpp std_msgs)
install(TARGETS old_school_talker DESTINATION bin)
ament_package()
